week-4/day-5/yaml-practice/block-b/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: health-check
spec:
  containers:
    - image: busybox
      name: busy
      command: ['sh', '-c', 'sleep 3600']
      livenessProbe:
        exec:
          command: ['cat', '/tmp/healthy']
