week-4/day-5/yaml-practice/block-b/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ing
spec:
  rules:
    - host: shop.local
      http:
        paths:
          - backend: 
              service:
                name: web-svc
                port:
                  number: 80
            pathType: Prefix
            path: /
